
Changes in JMurmel-1.2 relative to JMurmel-1.1

 * added more complete support for "let dynamic" and "let* dynamic"
   (before 1.2 only "let* dynamic" in interpreted code was supported)
 * added functions assq, list*
 * added  an optional parameter print-escape-p for write, writeln, lnwrite
 * added "(declaim (optimize..."

 * mlib: added functions last, circular-list, compose, conjoin, disjoin, map-into, curry, rcurry
 * mlib: inplace modification macros (incf, decf...) now process 1 or more args (was: 1 or 2)

 * added limited support for "macroexpand-1" in compiled code (quoted forms only)
 * some functions are opencoded
 * fixed compiler primitive "list" to return a mutable list
 * fixed compiled "let*"
 * fixed "append" for compiled code
 * fixed using rplaca on varargs list
 * fixed/ cleaned up feature-flags
 
 * backquote expansion generates more effivcient code


Changes in JMurmel-1.1 relative to JMurmel-1.0

 * added feature expressions #+, #-, and, or, not
 * added reader macros #b #o #f for binary, oct and hex, #\ for characters,
   accept (and ignore) #'
 * added load, require, provide
 * added default library "mlib"
 * added documentation in markdown (murmel-langref.md, mlib.md)
 * fixed numerous bugs